<resources>
    <string name="app_name">keyob</string>
    <string name="hint_email_english">Email</string>
    <string name="hint_email_persian">ایمیل</string>
    <string name="hint_password_english">Password</string>
    <string name="hint_password_persian">  رمز عبور </string>
    <string name="hint_wallet_address_english"> address </string>
    <string name="hint_wallet_address_persian"> ادرس </string>
    <string name="hint_name_english">name</string>
    <string name="hint_name_persian">نام</string>
    <string name="hint_user_name_english">user name </string>
    <string name="hint_user_name_persian"> نام کاربری </string>
    <string name="hint_family_english">family </string>
    <string name="hint_family_persian">نام خانوادگی </string>
    <string name="btn_register_english">REGISTER</string>
    <string name="btn_register_persian">ثبت نام</string>
    <string name="btn_login_by_google_english">login google account</string>
    <string name="btn_login_by_google_persian">ثبت نام با گوگل </string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_login_english">LOGIN</string>
    <string name="btn_login_persian">ورود</string>
    <string name="invite_english">invite</string>
    <string name="invite_persian">دعوت</string>
    <string name="Full_name_english">FullName</string>
    <string name="full_name_persian">فامیلی</string>
    <string name="phone_english">Enter your phone number:</string>
    <string name="phone_persian">شماره موبایل</string>
    <string name="inter_confirm_code_english">enter ConfirmCode</string>
    <string name="inter_confirm_code_persian">کد تایید...</string>
    <string name="reSend_english">resend code</string>
    <string name="reSend_persian"><u>ارسال دوباره</u></string>
    <string name="hint_confirm_code_english">Confirm Code</string>
    <string name="hint_confirm_code_persian">کد تایید</string>
    <string name="confirm_english">Confirm</string>
    <string name="confirm_persian">تایید</string>
    <string name="status_english">status</string>
    <string name="status_persian">وضعیت :</string>
    <string name="email_english">Email</string>
    <string name="email_persian">ایمیل</string>
    <string name="register_english">register</string>
    <string name="register_persian">ثبت نام</string>
    <string name="password_english">password</string>
    <string name="password_persian">رمز عبور</string>
    <string name="repeat_password_english">repeat password</string>
    <string name="repeat_password_persian">تکرار رمز عبور</string>
    <string name="emailTittle">enter your email</string>
    <string name="publicId_persian"> کد عمومی :</string>
    <string name="publicId_english"> public Id</string>
    <string name="sendTo_english">send To :</string>
    <string name="SendTo_persian">ارسال به :</string>
    <string name="receive_from_english">receive From :</string>
    <string name="receive_from_persian">دریافت از :</string>
    <string name="publicId_phoneNumber_english"> public Id /phone Number_ payer</string>
    <string name="publicId_phoneNumber_persian"> کدعمومی / موبایل نامبر _ پرداخت کننده</string>
    <string name="wallet_balance_english">balance</string>
    <string name="wallet_balance_persian">موجودی</string>
    <string name="cost_english">cost</string>
    <string name="cost_persian">مبلغ :</string>
    <string name="insert_cost_english">insert cost</string>
    <string name="insert_cost_persian">مبلغ را وارد کنید</string>
    <string name="description_english">description</string>
    <string name="description_persian">توضیحات :</string>
    <string name="createDate_english">date :</string>
    <string name="createDate_persian">تاریخ :</string>
    <string name="not_paid_english">not paid</string>
    <string name="not_paid_persian">پرداخت نشده</string>
    <string name="Paid_english">Paid</string>
    <string name="Paid_persian">پرداخت شده</string>
    <string name="not_Paid_english">not Paid</string>
    <string name="not_Paid_persian">پرداخت نشده</string>
    <string name="pass_enter_english">enter password</string>
    <string name="pass_enter_persian">رمز خود را وارد کنید</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcom">امنیت را با کیوب تجریه کنید...</string>
    <string name="title_activity_login">Sign in</string>
    <string name="share_qrCode_english">share qrCode</string>
    <string name="share_qrCode_persian"><u>اشتراک گزاری qrCode </u></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="facebook_action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="contact_english">contact</string>
    <string name="content_peofile_description">test</string>
    <string name="contact_persian">مخاطبین</string>
    <string name="addMony_english">addMony</string>
    <string name="addMony_persian">اضافه کردن پول</string>
    <string name="QRCodePay_english">QRCode pay</string>
    <string name="QRCodePay_persian">QRCode</string>
    <string name="transactios_english">history</string>
    <string name="transationS_persian">تاریخچه</string>
    <string name="walletManagement_english">wallet Manegment</string>
    <string name="walletManagement_persian">مدیریت کیف پول</string>
    <string name="linkManagement_english">link Managment</string>
    <string name="linkManagement_persian">مدیریت لینک ها</string>
    <string name="walletLink_english"> wallets Link :</string>
    <string name="walletLink_persian">لینک بگسک :</string>
    <string name="home_english">home</string>
    <string name="home_persian">خانه</string>
    <string name="walletList_english">wallet list</string>
    <string name="walletList_persian">کیف پول</string>
    <string name="payment_english">pay</string>
    <string name="payment_persian">پرداخت</string>
    <string name="continue_english">continue</string>
    <string name="continue_persian">ادامه</string>
    <string name="successful_english">success</string>
    <string name="successful_persian">موفق</string>
    <string name="unSuccessful_english">unSuccessful</string>
    <string name="unSuccessful_persian">ناموفق</string>
    <string name="no_english">no</string>
    <string name="no_persian">خیر</string>
    <string name="yes_english">yes</string>
    <string name="yes_persian">بله</string>
    <string name="tag_subject_english">subject</string>
    <string name="tag_subject_persian">عنوان</string>
    <string name="tag_count_english">count :</string>
    <string name="tag_count_persian">تعداد :</string>
    <string name="tag_pay_count_english"> pay counts :</string>
    <string name="tag_pay_count_persian"> تعداد پرداخت ها :</string>
    <string name="tag_total_pay_amount_english"> total pay received:</string>
    <string name="tag_total_pay_amount_persian"> کل مبلغ دریافتی :</string>
    <string name="tag_title_english">title</string>
    <string name="tag_title_persian">عنوان :</string>
    <string name="tag_share_qrCode_english"> share QrCode</string>
    <string name="tag_share_qrCode_persian"><u> اشتراک گزاری QrCode </u></string>
    <string name="tag_share_tag_english">share tag </string>
    <string name="tag_share_tag_persian"> اشتراک گزاری برچسب </string>
    <string name="notification_english">notification</string>
    <string name="notification_persian">اعلان ها</string>
    <string name="aboutUs_english">about us</string>
    <string name="aboutUs_persian">در باره ی ما </string>
    <string name="privacy_polilcy_english">privacy policy</string>
    <string name="privacy_polilcy_persian">قوانین حریم شخصی</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="hint_Wallet_id_english">wallet ID</string>
    <string name="hint_Wallet_id_persian">شناسه کیف پول </string>
    <string name="hint_wallet_type_english">wallet type</string>
    <string name="hint_wallet_type_persian">نوع کیف پول </string>
    <string name="hint_wallet_Name_english">wallet name</string>
    <string name="hint_wallet_Name_persian">نام بگسک</string>
    <string name="hint_wallet_description_english">description</string>
    <string name="hint_wallet_description_persian">توضیحات</string>
    <string name="hint_wallet_pass_payment_english">password payment</string>
    <string name="hint_repeat_pass_payment_english">repeat pass</string>
    <string name="hint_repeat_pass_payment_persian"> تکرار رمز پرداخت</string>
    <string name="hint_wallet_pass_payment_persian">رمز پرداخت</string>
    <string name="spinner_selectable_english">choose  ...</string>
    <string name="spinner_selectable_persian">انتخاب کنید ...</string>
    <string name="wallet_type_personal_english">personal</string>
    <string name="wallet_type_personal_persian">شخصی</string>
    <string name="wallet_type_business_english">business</string>
    <string name="wallet_type_business_persian">تجاری</string>
    <string name="welcome_english"> welcome to keyob </string>
    <string name="welcome_persian">به کیوب خوش امدید</string>
    <string-array name="spinner_item">
        <item>personal</item>
        <item>business</item>
    </string-array>
    <string name="focus_on_qr_code">pleas focus on qr code</string>
    <string name="scanQRCode_english">scanQrCode</string>
    <string name="scanQrCode_persian">اسکن Qr code</string>
    <string name="internet_is_off_english">internet  unavailable !!!</string>
    <string name="internet_is_off_persian">شما به انیترنت دسترسی ندارید !!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="direction_1_persian">از حالا شما دارای  یک بکسگ شخصی هستید</string>
    <string name="direction_2_persian">لطفا مشخصات بگسک خود را وارد کنید</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>