<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keyob.payment.gateway.activities.GetDetaileActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >


        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_name_persian"
            android:fontFamily="@font/iransans"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/bg_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="16dp"
            tools:ignore="Deprecated" />

        <EditText
            android:id="@+id/family"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_family_persian"
            android:fontFamily="@font/iransans"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textSize="16dp"
            android:textColor="@color/bg_register"
            android:textColorHint="@color/input_register_hint"
            tools:ignore="Deprecated" />

    
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_email_persian"
            android:fontFamily="@font/iransans"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_register"
            android:textColorHint="@color/input_register_hint"
            tools:ignore="Deprecated" />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_password_persian"
            android:fontFamily="@font/iransans"
            android:inputType="textVisiblePassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/bg_register"
            android:textColorHint="@color/input_register_hint"
            tools:ignore="Deprecated" />
        <!-- Login Button -->
        <Button
            android:id="@+id/btn_detail_Register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/image_btn_shape"
            android:fontFamily="@font/iransans"
            android:text="@string/confirm_persian"
            android:textColor="@color/white"
            android:textSize="20dp"/>


    </LinearLayout>
    
</LinearLayout>
