<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateWalletActivity"
    android:id="@+id/c_w_rootView">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true">

            <EditText
            android:id="@+id/c_w_Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_wallet_Name_persian"
            android:background="@color/white"
            android:fontFamily="@font/iransans"
            android:padding="5dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/bg_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="16dp"
            tools:ignore="Deprecated" />

        <EditText
            android:id="@+id/c_w_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_wallet_pass_payment_persian"
            android:fontFamily="@font/iransans"
            android:padding="5dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/bg_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="16dp"
            android:textAlignment="textEnd"
            tools:ignore="Deprecated" />
        <EditText
            android:id="@+id/c_w_confirm_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_repeat_pass_payment_persian"
            android:fontFamily="@font/iransans"
            android:padding="5dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/bg_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="16dp"
            android:textAlignment="textEnd"
            tools:ignore="Deprecated" />

        <Button
            android:id="@+id/c_w_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_btn_shape"
            android:text="@string/confirm_persian"
            android:fontFamily="@font/iransans"
            android:textSize="17dp"
            android:textColor="@color/white"
            />

    </LinearLayout>
</RelativeLayout>