<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_name_persian"
            android:fontFamily="@font/iransans"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            tools:ignore="Deprecated"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_email_persian"
            android:fontFamily="@font/iransans"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            tools:ignore="Deprecated"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/btn_login_bg"
            android:hint="@string/hint_password_persian"
            android:fontFamily="@font/iransans"
            android:inputType="textVisiblePassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:maxLines="1"
            android:textSize="16dp"/>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/image_btn_shape"
            android:text="@string/btn_register_persian"
            android:fontFamily="@font/iransans"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <!--<Button-->
            <!--android:id="@+id/btnLinkToLoginScreen"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="40dip"-->
            <!--android:background="@drawable/image_profile_shape"-->
            <!--android:text="@string/btn_login"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="15dp"-->
            <!--tools:ignore="SpUsage" />-->
    </LinearLayout>

</LinearLayout>